--- a/src/main/webapp/accueil.html
+++ b/src/main/webapp/accueil.html
@@ -4,13 +4,13 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-<h:head>
+<head>
     <title>Accueil - FanfareHub</title>
-</h:head>
-<h:body>
-    <h:outputText value="Bienvenue, #{sessionScope.nomFanfaronConnecte} !" />
-    <h:form>
-        <h:commandButton value="Se déconnecter" action="#{connexionBean.deconnecter}" />
-    </h:form>
-</h:body>
+</head>
+<body>
+    <outputText value="Bienvenue, #{sessionScope.nomFanfaronConnecte} !" />
+    <form>
+        <commandButton value="Se déconnecter" action="#{connexionBean.deconnecter}" />
+    </form>
+</body>
 </html>
